Removed last year speakers

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -64,7 +64,7 @@
       <img class="ui image" src="/speakers_images/uniconlogo2019.png">
     </div>
     <div class="ui center aligned text container">
-      <a class="item " id="about" href="#about">About</a>
+      <a class="item" id="about" href="#about">About</a>
       <a class="item" id="agenda" href="#agenda">Agenda</a>
       <a class="item" id="speakers" href="#speakers">Speakers</a>
       <a class="item" id="partners" href="#partners">Partners</a>
@@ -274,117 +274,6 @@
       <!--Present Speakers-->
     </div>
 
-  <div class="ui vertical speakers-section center aligned segment" id="speakers">
-    <div class="ui text header container">
-      <h1 class="ui header">Speakers for 2018</h1>
-    </div>
-    <div class="ui middle aligned equal width grid detail container">
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://en.wikipedia.org/wiki/Janil_Puthucheary"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Dr Janil Puthucheary</div><br>Senior Minister of State<br>MCI &amp; MOE</h3>
-        <img class="ui rounded image" src="/speakers_images/janil.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/yodchatri"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Chatri Sityodtong</div><br>Founder, CEO<br>ONE Championship</h3>
-        <img class="ui rounded image" src="/speakers_images/chatri.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.linkedin.com/in/oliver-tan-277b0127"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Oliver Tan</div><br>Co-Founder, CEO<br>Visenze</h3>
-        <img class="ui rounded image" src="/speakers_images/oliver.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/karlmaks"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Karl Mak</div><br>Co-Founder, CEO<br>Hepmil (SGAG &amp; MGAG)</h3>
-        <img class="ui rounded image" src="/speakers_images/karl.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/rachel-lim-25b3b262"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Rachel Lim</div><br>Co-Founder, CEO<br>Love, Bonito</h3>
-        <img class="ui rounded image" src="/speakers_images/rachel.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/dionesong"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Dione Song</div><br>Chief Commercial Officer<br>Love, Bonito</h3>
-        <img class="ui rounded image" src="/speakers_images/dione.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.linkedin.com/in/oziamanat/"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Ozi Amanat</div><br>Founding Partner<br>K2 Global VC</h3>
-        <img class="ui rounded image" src="/speakers_images/ozi.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/sgjames"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">James Tan</div><br>Managing Partner<br>Quest Ventures</h3>
-        <img class="ui rounded image" src="/speakers_images/james.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/vincentlauria"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Vinnie Lauria</div><br>Founding Partner<br>Golden Gate Ventures</h3>
-        <img class="ui rounded image" src="/speakers_images/vinnie.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/saeminahn"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Saemin Ahn</div><br>Managing Partner<br>Rakuten Ventures</h3>
-        <img class="ui rounded image" src="/speakers_images/saemin.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/albertshyy"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Albert Shyy</div><br>Principal<br>Burda Principal Investments</h3>
-        <img class="ui rounded image" src="/speakers_images/albert.png">
-      </div>
-
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/praveenvelu"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name" id="no_warp">Praveen Velu</div><br>Co-Founder, CEO<br>Evie.ai</h3>
-        <img class="ui rounded image" src="/speakers_images/praveen.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/pkhushani"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Pankaj khushani</div><br>Head of Analytics &amp; Platform Partnership SEA<br>Google</h3>
-        <img class="ui rounded image" src="/speakers_images/pankaj.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/dfallarme"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name" id="no_warp">David Fallarme</div><br>Senior Marketing Manager<br>Hubspot</h3>
-        <img class="ui rounded image" src="/speakers_images/david.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/abhilashmurthy"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Abhilash Murthy</div><br>Founder,CEO<br>Bus Uncle</h3>
-        <img class="ui rounded image" src="/speakers_images/abhil.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/kenneth-lou"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name" id="no_warp">Kenneth Lou</div><br>Co-founder, CEO<br>Seedly</h3>
-        <img class="ui rounded image" src="/speakers_images/kenneth.png">
-      </div>
-
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.linkedin.com/in/shaundjie"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name" id="no_warp">Shaun Djie</div><br>Co-founder<br>DigixGlobal</h3>
-        <img class="ui rounded image" src="/speakers_images/shaun.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/bjornlee"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Bjorn Lee</div><br>Founder & CEO<br>MindFi</h3>
-        <img class="ui rounded image" src="/speakers_images/bjorn.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.linkedin.com/in/jacopodaeli/"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Jacopo Daeli</div><br>Senior Software Engineer<br>GoDaddy</h3>
-        <img class="ui rounded image" src="/speakers_images/jacopo.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.linkedin.com/in/anna-rehermann-a1599529/"><i class="linkedin icon"></i></a>
-        <h3 class="info"><div class="name">Anna Rehermann</div><br>Founder<br>Growth Hacking Asia</h3>
-        <img class="ui rounded image" src="/speakers_images/anna.png">
-      </div>
-    </div>
-    <!--Past Speakers-->
-  </div>
-
 
   <div class="ui vertical partners-section center aligned segment" id="partners">
     <div class="ui text header container">
@@ -486,9 +375,7 @@
         <a href="https://launchcampus.co"><img class="ui image" src="/speakers_images/launch_campus.png"></a>
       </div>
     </div>
-
   </div>
-
 
 
 
@@ -538,6 +425,7 @@
     </div>
 
   </div>
+  <a name="arena"></a>
   <div class="ui vertical arena-section segment" id="arena">
     <div class="ui text header container">
       <h1 class="ui header">Arena</h1>
