added new speakers and adjusted arena form

--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -8,22 +8,6 @@ body {
   color: white;
 }
 
-.ui.button.big {
-  width: 300px;
-  display: block;
-  margin: 20px auto;
-  background-color: rgb(48, 207, 208);
-  color: white;
-}
-
-.ui.button.big.arena {
-  width: 300px;
-  display: block;
-  margin: 20px auto;
-  background-color: rgb(45, 61, 133);
-  color: white;
-}
-
 .ui.vertical.segment {
   border-bottom: none;
 }
@@ -56,6 +40,7 @@ body {
 .header-section.segment {
   width: 100%;
   height: 100%;
+  zoom: 0.75;
 }
 
 .header-section.segment #background img {
@@ -467,6 +452,24 @@ body {
   color: black;
 }
 
+#full-agenda{
+  width: 300px;
+  display: block;
+  margin: 20px auto;
+  background-color: rgb(48, 207, 208);
+  color: white;
+  font-size: 18px;
+}
+
+#video {
+  width: 300px;
+  display: block;
+  margin: 20px auto;
+  background-color: rgb(45, 61, 133);
+  color: white;
+  font-size: 18px;
+}
+
 
 .pricing-section.segment {
   width: 100%;
@@ -567,28 +570,28 @@ body {
 
 .arena-section.segment .arena.container #eligibility_criteria{
   z-index: 1;
+  width: 200px;
+  display: block;
+  color: white;
+  font-size: 18px;
   position: absolute;
-  left: 0;
-  top: 49%;
-  right: 0;
-  bottom: 0;
+  top: 72%;
+  left: 0%;
+  right: 0%;
   margin: auto;
-  width: 165px;
-  height: 48px;
-  text-align: center;
 }
 
 .arena-section.segment .arena.container #arena_next{
   z-index: 1;
+  width: 200px;
+  display: block;
+  color: white;
+  font-size: 18px;
   position: absolute;
-  left: 0;
-  top: 69%;
-  right: 0;
-  bottom: 0;
+  top: 85%;
+  left: 0%;
+  right: 0%;
   margin: auto;
-  width: 165px;
-  height: 48px;
-  text-align: center;
 }
 
 .arena-section.segment .arena.container h2{
@@ -603,6 +606,10 @@ body {
   height: fit-content;
   border-radius: 12px;
   border: 6px solid rgb(48, 207, 208);
+}
+
+.arena-section.segment .arena.container #arena_application_form_section img{
+  height: 980px;
 }
 
 .arena-section.segment .arena.container .shape .sides .side h2{
@@ -620,7 +627,7 @@ body {
   z-index: 99;
   position: absolute;
   left: 15%;
-  top: 1.5%;
+  top: 3%;
   margin: auto;
   width: 70%;
   text-align: left;
@@ -1031,7 +1038,7 @@ body {
   }
 
   .arena-section.segment .arena.container #arena_application_form_section img{
-      height: 1000px;
+      height: 1050px;
   }
 }
 
@@ -1087,8 +1094,6 @@ body {
   .arena-section.segment .arena.container #arena_application_form_section img{
     height: 1100px;
   }
-
-
 }
 
 @media only screen and (max-width: 700px) {
@@ -1387,8 +1392,15 @@ body {
     font-size: 14px;
   }
 
+  .arena-section.segment .arena.container #eligibility_criteria{
+    width: 100px;
+    font-size: 12px;
+  }
+
   .arena-section.segment .arena.container #arena_next{
-      top: 85%;
+    top: 85%;
+    width: 150px;
+    font-size: 12px;
   }
 
   .arena-section.segment .arena.container .shape .sides .side form{
