--- a/views/main.ejs
+++ b/views/main.ejs
@@ -140,16 +140,12 @@
               <h3 class="title">PASSION AND PRACTICALITY</h3>
             </div>
             <div class="event">
-              <h3 class="date">11:30 AM</h3>
-              <h3 class="title">BLOCKCHAIN: BREAKING THE TRADITIONAL CHAIN</h3>
-            </div>
-            <div class="event">
               <h3 class="date">12:00 PM</h3>
               <h3 class="title">LUNCH</h3>
             </div>
             <div class="event">
               <h3 class="date">1:00 PM</h3>
-              <h3 class="title">AFTERNOON PANEL DISCUSSIONS</h3>
+              <h3 class="title">MAKING SENSE OF BIG DATA IN THE DIGITAL AGE<br>TECHNOLOGIES OF THE FUTURE<br>SINGAPORE'S ROLE IN SEA START-UP SCENE <br>BLOCK CHAIN: CRYPTO & BEYONG</h3>
             </div>
             <div class="event">
               <h3 class="date">7:00PM</h3>
@@ -162,11 +158,11 @@
             <h2>DAY 2, FEBRUARY 24TH</h2>
             <div class="event">
               <h3 class="date">10:00 AM</h3>
-              <h3 class="title">CYBERSECURITY: HOW SAFE ARE YOUR ASSETS?</h3>
+              <h3 class="title">SOUTHEAST ASIA INTERNET ECONOMY</h3>
             </div>
             <div class="event">
               <h3 class="date">10:30 AM</h3>
-              <h3 class="title">PIVOT YOUR WAY TO SUCCESS</h3>
+              <h3 class="title">PURSUING BLUE OCEAN STRATEGY</h3>
             </div>
             <div class="event">
               <h3 class="date">11:00 AM</h3>
@@ -182,7 +178,7 @@
             </div>
             <div class="event">
               <h3 class="date">2:00 PM</h3>
-              <h3 class="title">BLACK MIRROR: DREAM OR DYSTOPIA</h3>
+              <h3 class="title">GROWTH HACKING IN THE REGION</h3>
             </div>
             <div class="event">
               <h3 class="date">3:00 PM</h3>
@@ -195,10 +191,20 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="ui text description container">
-        <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui button">UNICON 2018 Video</a>
-      </div>
+    <div class="ui text description container">
+      <a href="https://drive.google.com/file/d/15rB5hy39wZYZ2b9YOflSlPhTHstHgria/view?usp=sharing" class="ui animated button" id="full-agenda">
+        <div class="visible content">View Full Agenda</div>
+        <div class="hidden content"><i class="list icon"></i></div>
+      </a>
+    </div>
+    <br>
+    <div class="ui text description container">
+      <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="ui animated button" id="video">
+        <div class="visible content">UNICON 2018 Video</div>
+        <div class="hidden content"><i class="play icon"></i></div>
+      </a>
     </div>
 
     <div class="ui vertical speakers-section center aligned segment" id="speakers">
@@ -218,7 +224,7 @@
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/arrif-ziaudeen-a72449a/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name" id="no_warp">Arrif Ziaudeen</div><br>Founder and CEO<br>Chope</h3>
+          <h3 class="info"><div class="name" id="no_warp">Arrif Ziaudeen</div><br>CEO & Founder<br>Chope</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/Arrif_Ziaudeen.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
@@ -227,14 +233,9 @@
           <img class="ui rounded image" src="/speakers_images/speakers2019/Shanru_Lai.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
-          <a href="https://www.linkedin.com/in/julianhosp/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name" id="no_warp">Dr. Julian Hosp</div><br>Co-Founder<br>TenX</h3>
-          <img class="ui rounded image" src="/speakers_images/speakers2019/Dr_Julian_Hosp.png">
-        </div>
-        <div class="eight wide mobile four wide tablet four wide computer column">
-          <a href="https://www.linkedin.com/in/mhlints/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name">Michael Lints</div><br>Partner<br>Golden Gate Ventures</h3>
-          <img class="ui rounded image" src="/speakers_images/speakers2019/Michael_Lints.png">
+          <a href="https://www.linkedin.com/in/jeffrey-chua-029206107/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Jeffery Chua</div><br>Associate<br>Golden Gate Ventures</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Jeffery_Chua.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/teck-yong-lim-62141032/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
@@ -245,6 +246,11 @@
           <a href="https://www.linkedin.com/in/sakhee/"><i class="linkedin icon"></i></a>
           <h3 class="info"><div class="name">Sakhee Dheer</div><br>Head of Digital, Global Business Marketing<br>Facebook</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/sakhee_dheer.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/hyungbinkim/"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Danny Kim</div><br>APAC Central Strategy Planning Principal<br>Google</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Hyungbin_Danny_Kim.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/chuakelvin/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
@@ -270,6 +276,21 @@
           <a href="https://www.linkedin.com/in/david-fowler-b8b32268/"><i class="linkedin icon"></i></a>
           <h3 class="info"><div class="name">David Fowler</div><br>Director<br>PwC Singapore's Venture Hub</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/David_Fowler.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/tkelvin/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Kelvin Teo</div><br>CEO & Co-Founder<br>Funding Societies</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Kelvin_Teo.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/mohanbelani/"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Mohan Belani</div><br>CEO & Co-Founder<br>e27</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/mohan_belani.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/doug-parker-949ab81/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Doug Parker</div><br>COO<br>nuTonomy</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Doug_Parker.png">
         </div>
       <!--Present Speakers-->
     </div>
@@ -311,6 +332,9 @@
         <img class="ui image" src="/speakers_images/ntu.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/sit.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/hkust.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
@@ -327,6 +351,9 @@
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/tokyo.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/nucb.png">
       </div>
     </div>
 
@@ -438,11 +465,11 @@
               <img class="ui rounded image" src="/speakers_images/arena.jpg">
               <h1 class="ui header">BRINGING YOUR START-UP IDEAS TO LIFE</h1>
               <a class="ui animated button" id="eligibility_criteria" href="https://drive.google.com/file/d/1qDzGvaDaEOtWCVBUN2Iqv3oTQHIyjd8V/view?usp=sharing">
-                <div class="visible content"><h2>Details</h2></div>
-                <div class="hidden content"><i class="large list icon"></i></div>
+                <div class="visible content">Details</div>
+                <div class="hidden content"><i class="list icon"></i></div>
               </a>
               <div class="ui animated button" id="arena_next">
-                <div class="visible content"><h2>Register Now</h2></div>
+                <div class="visible content">Register Now</div>
                 <div class="hidden content"><i class="right arrow icon"></i></div>
               </div>
             </div>
@@ -478,6 +505,12 @@
                 <div class="inline field">
                   <div class="ui checkbox">
                     <input type="checkbox" tabindex="0" class="hidden" required="required">
+                    <label><h2>You have registered for UNICON 2019</h2></label>
+                  </div>
+                </div>
+                <div class="inline field">
+                  <div class="ui checkbox">
+                    <input type="checkbox" tabindex="0" class="hidden" required="required">
                     <label><h2>The start-up has less than S$50,000 of external funding.</h2></label>
                   </div>
                 </div>
@@ -499,7 +532,7 @@
                 </button>
                 <br>
                 <br>
-                <label><h2>IMPORTANT NOTE:<br> Send your deck file to <a href="mailto:unicon@nes.org.sg?Subject=Arena Deck for" target="_top">unicon@nes.org.sg </a> and <a href="mailto:Robin.lim@u.nus.edu?Subject=Arena Deck for" target="_top">Robin.lim@u.nus.edu </a>within 1 day after your application form is submitted. (Please ensure that your name and your Start-up name are included in your deck file name.)</h2></label>
+                <label><h2>IMPORTANT NOTE:<br> Send your deck file to <a href="mailto:unicon@nes.org.sg?Subject=Arena Deck for" target="_top">unicon@nes.org.sg </a> and <a href="mailto:robin.lim@u.nus.edu?Subject=Arena Deck for" target="_top">robin.lim@u.nus.edu </a>within 1 day after your application form is submitted. (Please ensure that your name and your Start-up name are included in your deck file name.)</h2></label>
               </form>
             </div>
           </div>
