--- a/views/main.ejs
+++ b/views/main.ejs
@@ -284,12 +284,12 @@
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/mohanbelani/"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name">Mohan Belani</div><br>CEO & Co-Founder<br>e27</h3>
+          <h3 class="info"><div class="name" id="no_warp">Mohan Belani</div><br>CEO & Co-Founder<br>e27</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/mohan_belani.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/doug-parker-949ab81/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name">Doug Parker</div><br>COO<br>nuTonomy</h3>
+          <h3 class="info"><div class="name" id="no_warp">Doug Parker</div><br>COO<br>nuTonomy</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/doug_parker.png">
         </div>
       <!--Present Speakers-->
