--- a/views/main.ejs
+++ b/views/main.ejs
@@ -269,7 +269,7 @@
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/yanphun/"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name">Yan Phun</div><br>COO<br>99.co</h3>
+          <h3 class="info"><div class="name" id="no_warp">Yan Phun</div><br>COO<br>99.co</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/Yan_Phun.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
