added new uni partners

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -332,13 +332,43 @@
         <img class="ui image" src="/speakers_images/ntu.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/SMU.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/SUTD.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/SIM.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/sit.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/curtin.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/university_sydney.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/hkust.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/UPD.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/UTM.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/kaist.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/UB.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/RJC.jpg">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/tp.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/tsinghua.png">
