added new uni partners

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -344,7 +344,7 @@
         <img class="ui image" src="/speakers_images/sit.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/curtin.png">
+        <img class="ui image" src="/speakers_images/Curtin.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/university_sydney.png">
@@ -365,12 +365,6 @@
         <img class="ui image" src="/speakers_images/UB.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/RJC.jpg">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/tp.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/tsinghua.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
@@ -384,6 +378,12 @@
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/nucb.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/RJC.jpg">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/tp.png">
       </div>
     </div>
 
